Adding axios and making the login actions/reducers

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -459,7 +459,7 @@
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "Isomorphic",
+  "page.signInTitle": "EncontrAR",
   "page.signInRememberMe": "Remember me",
   "page.signInButton": "Sign in",
   "page.signInPreview": "username: demo, password: demodemo, or Just click on any button.",
