Creating the new campaign view

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -4,6 +4,8 @@
   "admin.sidebar.missing_people": "Personas perdidas",
   "admin.sidebar.finders": "Finders",
   "admin.sidebar.zones": "Zonas",
+  "admin.campaign.new.title": "Título",
+  "admin.campaign.new.description": "Descripción",
   "sidebar.email": "Email",
   "sidebar.ecommerce": "Ecommerce",
   "sidebar.shop": "Shop",
