Implementing active campaigns filter

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -5,6 +5,7 @@
   "admin.sidebar.finders": "Finders",
   "admin.sidebar.zones": "Zonas",
   "admin.sidebar.messages": "Mensajes",
+  "admin.sidebar.reports": "Reportes",
   "admin.campaign.new.title": "Título",
   "admin.campaign.new.description": "Descripción",
   "sidebar.email": "Email",
